Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-822

[Python] StreamWriter fails to open with socket as sink

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 0.3.0
    • Python
    • None

    Description

      Trying to use pyarrow StreamWriter to write to a socket fails. I've tried the following:

      • Use socket directly and get "TypeError: Unable to read from object of type: <class 'socket._socketobject'>"
        looks like pyarrow expects the object to have a "write" attribute
      • Using as a file object with: "sock.makefile("wb", 65536)" get the error "pyarrow.error.ArrowIOError: IOError: '_fileobject' object has no attribute 'tell'"
        Not sure why exactly "tell" is required.
      • using "os.fdopen(sock.fileno(), "wb", 65536)" get a rather cryptic error that I've been unable to track down:
        "terminate called after throwing an instance of 'std::logic_error' what(): basic_string::_M_construct null not valid"
        Seems to indicate some kind of std::string construction with a NULL, but I can't find that anywhere

      Attachments

        Issue Links

          Activity

            People

              bryanc Bryan Cutler
              bryanc Bryan Cutler
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: